labs/fundamentos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: primeiro-service
  namespace: fundamentos
spec:
  selector:
    app: primeiro-deployment
  ports:
  - name: http
    port: 8080
    targetPort: http
